--- a/helm/templates/mariadb-secret.yaml
+++ b/helm/templates/mariadb-secret.yaml
@@ -1,8 +1,10 @@
+{{- if index .Values "mariadb-cluster" "enabled" }}
 apiVersion: v1
 kind: Secret
 metadata:
-  name: esthesis-edge
+  name: mariadb
 type: Opaque
 stringData:
-  password: {{ .Values.mariadb-cluster.users.passwordSecretKeyRef.password | quote }}
-  root-password: {{ .Values.mariadb-cluster.mariadb.rootPasswordSecretKeyRef.password | quote }}
+  password: {{ index .Values "mariadb-cluster" "auth" "password" | quote }}
+  root-password: {{ index .Values "mariadb-cluster" "auth" "rootPassword" | quote }}
+{{ end }}
