chore: enedis integration changes #18 wip

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -63,7 +63,7 @@ services:
       ESTHESIS_EDGE_MODULES_ENEDIS_SELF_REGISTRATION_ENABLED: "${ESTHESIS_EDGE_MODULES_ENEDIS_SELF_REGISTRATION_ENABLED:-false}"
       ESTHESIS_EDGE_MODULES_ENEDIS_SELF_REGISTRATION_STATE_CHECKING: "${ESTHESIS_EDGE_MODULES_ENEDIS_SELF_REGISTRATION_STATE_CHECKING:-true}"
       ESTHESIS_EDGE_MODULES_ENEDIS_SELF_REGISTRATION_WELCOME_URL: "${ESTHESIS_EDGE_MODULES_ENEDIS_SELF_REGISTRATION_WELCOME_URL:-}"
-      ESTHESIS_EDGE_MODULES_ENEDIS_SELF_REGISTRATION_REDIRECT_URL: "${ESTHESIS_EDGE_MODULES_ENEDIS_SELF_REGISTRATION_REDIRECT_URL:-http://localhost:8080}"
+      ESTHESIS_EDGE_MODULES_ENEDIS_SELF_REGISTRATION_REDIRECT_URL: "${ESTHESIS_EDGE_MODULES_ENEDIS_SELF_REGISTRATION_REDIRECT_URL:-https://mon-compte-particulier.enedis.fr/dataconnect/v1/oauth2/authorize"
       ESTHESIS_EDGE_MODULES_ENEDIS_SELF_REGISTRATION_DURATION: "${ESTHESIS_EDGE_MODULES_ENEDIS_SELF_REGISTRATION_DURATION:-P1Y}"
       ESTHESIS_EDGE_MODULES_ENEDIS_SELF_REGISTRATION_PAGE_LOGO1_URL: "${ESTHESIS_EDGE_MODULES_ENEDIS_SELF_REGISTRATION_PAGE_LOGO1_URL:-https://datahub-enedis.fr/wp-content/uploads/Enedis-signature_couleur_RVB_72-dpi.png}"
       ESTHESIS_EDGE_MODULES_ENEDIS_SELF_REGISTRATION_PAGE_LOGO2_URL: "${ESTHESIS_EDGE_MODULES_ENEDIS_SELF_REGISTRATION_PAGE_LOGO2_URL:-https://www.eurodyn.com/wp-content/uploads/2018/11/logo_ed.png}"
